--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -85,3 +85,22 @@ textarea {
 .btn {
 	font-size: 20px;
 }
+
+.list{
+	padding: 30px;
+	border: 1px solid #ced4da;
+	border-radius: 10px;
+	box-shadow: 1px 5px 20px black;
+	width: 50%;
+	margin: 100px auto;
+	font-size: 20px;	
+	background-image: linear-gradient(to right, #eeeeee, #f8f8ff);
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+}
